--- a/calculator/style.css
+++ b/calculator/style.css
@@ -84,3 +84,12 @@ html, body #fullheight {
     grid-column: span 2;
     border: none;
 }
+
+.selectedSigh {
+    background-color: white;
+    color: #FF9F0A;
+}
+
+.changedStyles {
+    font-size: 10px;
+}
