--- a/iphoneDynamic/style.css
+++ b/iphoneDynamic/style.css
@@ -212,3 +212,47 @@ body {
     --g-l: calc(var(--c-l) + 20%);
     transform: scale3d(1, -1, 1) translateZ(1px);
 }
+
+.bg .section:last-of-type::before {
+    background: radial-gradient(85% 125% at 50% 140%, black 66.6%, transparent), radial-gradient(120% 120% at 50% 145%, hsl(calc(var(--g-h) - var(--g-hue-adjust-2, var(--g-hue-adjust, 0))), 100%, 50%) 50%, transparent), radial-gradient(150% 100% at 50% 95%, transparent 15%, hsl(calc(var(--g-h) + 5), 100%, var(--g-lightness, 100%)));
+    background-color: hsl(var(--g-h), var(--g-s), var(--g-l));
+}
+
+.notch-container {
+    position: absolute;
+    z-index: 3;
+    top: var(--pad);
+    right: var(--pad);
+    left: var(--pad);
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    max-height: calc(var(--notch-radius) * 2);
+    pointer-events: none;
+    outline: none;
+    transition: var(--notch-duration) var(--ease);
+    transition-property: max-height, max-width, filter, transform;
+    will-change: max-width, max-height, filter;
+    outline: none;
+}
+
+.notch-container:hover, .notch-container:focus-within {
+    --shadow-opacity: 0.5s;
+    transition-timing-function: var(--ease-spring);
+}
+
+.notch-container:hover .content, .notch-container:focus-within .content{
+    --content-padding: 2em;
+}
+
+.notch-container:hover .content .text, .notch-container:focus-within .content .text{
+    opacity: 1;
+}
+
+.notch-container:hover .notch, .notch-container:focus-within .notch{
+    max-width: 100%;
+    max-height: 100%;
+    pointer-events: all;
+    transform: scale3d(1, 1, 1);
+}
+
