--- a/iphoneDynamic/style.css
+++ b/iphoneDynamic/style.css
@@ -219,6 +219,7 @@ body {
 }
 
 .notch-container {
+    margin-top: 8px;
     position: absolute;
     z-index: 3;
     top: var(--pad);
@@ -298,6 +299,7 @@ body {
 }
 
 .notch {
+    margin-top: 6px;
     position: relative;
     background: black;
     border-radius: var(--notch-radius);
@@ -572,4 +574,76 @@ input[type=radio]{
 
 .silver .glow{
     opacity: 0.25;
+}
+
+#deep-purple:checked~.phone .bg .deep-purple{
+    opacity: 1;
+    z-index: 1;
+    transition-delay: 0s;
+}
+
+#deep-purple:checked~.phone .bg .deep-purple .section::before{
+    transition-delay: 0s;
+    animation: test 1s infinite alternate-reverse;
+}
+
+#deep-purple:checked~.pallette label[for=deep-purple]{
+    border-color: hsl(var(--deep-purple), 50%, 75%);
+}
+
+#gold:checked~.phone .bg .gold{
+    opacity: 1;
+    z-index: 1;
+    transition-delay: 0s;
+}
+
+#gold:checked~.phone .bg .gold .section::before{
+    transition-delay: 0s;
+    transform: scale3d(1, 1, 1) translate3d(0, 0, 0);
+    animation: test 1s infinite alternate-reverse;
+}
+
+#gold:checked~.pallette label[for=gold]{
+    border-color: hsl(var(--gold), 50%, 75%);
+}
+
+#space-black:checked~.phone .bg .space-black{
+    opacity: 1;
+    z-index: 1;
+    transition-delay: 0s;
+}
+
+#space-black:checked~.phone .bg .space-black .section::before{
+    transition-delay: 0s;
+    transform: scale3d(1, 1, 1) translate3d(0, 0, 0);
+    animation: test 1s infinite alternate-reverse;
+}
+
+#space-black:checked~.pallette label[for=space-black]{
+    border-color: hsl(var(--space-black), 50%, 75%);
+}
+
+#silver:checked~.phone .bg .silver{
+    opacity: 1;
+    z-index: 1;
+    transition-delay: 0s;
+}
+
+#silver:checked~.phone .bg .silver .section::before{
+    transition-delay: 0s;
+    transform: scale3d(1, 1, 1) translate3d(0, 0, 0);
+    animation: test 1s infinite alternate-reverse;
+}
+
+#silver:checked~.pallette label[for=silver]{
+    border-color: hsl(var(--silver), 50%, 75%);
+}
+
+@keyframes test{
+    from{
+        transform: scale3d(1, 1, 1) translate3d(0, 0, 0);
+    }
+    to{
+        transform: scale3d(2, 2, 2) translate3d(50px, 50px, 50px);
+    }
 }
